IMPALA-9124: ImpalaServer and ClientRequestState refactoring

Re-factoring several areas of the ImpalaServer and ClientRequestState
in preparation for future work required for transparent query retries.

Re-factored TExecRequest ownership in ClientRequestState. Previously,
the TExecRequest was passed to the ClientRequestState via the
Exec(TExecRequest) method. Now it is created and owned by the
ClientRequestState and only exposed as a constant reference. It is
stored as a plain member variable.

Re-factored ImpalaServer::UnregisterQuery into multiple methods. Made
ClientRequestStateMap a dedicated class that extends ShardedQueryMap
with additional methods to add and delete a ClientRequestState. The
re-factoring breaks up the large UnregisterQuery method into multiple
smaller method and adds some additional code documentation.

Re-factored ImpalaServer::client_request_state_map_ into a separate
class.

Testing:
* Ran core tests

Change-Id: Ib92c932a69802225af3fd9bf15f85c85317acaca
Reviewed-on: http://gerrit.cloudera.org:8080/14755
Reviewed-by: Sahil Takiar <stakiar@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>